@@ -68,6 +68,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #9790: Rework imports necessary for samefile and sameopenfile
+  in ntpath.
+
 - Issue #9928: Properly initialize the types exported by the bz2 module.
 
 - Issue #1675951: Allow GzipFile to work with unseekable file objects.
